--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Michael Nickel",
   "license": "ISC",
   "dependencies": {
+    "dat.gui": "^0.7.6",
     "express": "^4.17.1",
     "nodemon": "^1.19.1",
     "three": "^0.106.2"
